--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ python-json-logger = "~=0.1.11"
 sdc-cryptography = "~=0.4.0"
 structlog = "~=20.1.0"
 tenacity = "~=6.2.0"
+jinja2 = "~=2.11.2"
 
 [dev-packages]
 aiohttp-devtools = "~=0.13.1"
