--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,7 +9,7 @@ steps:
 #    id: Expand M2 Cache
 #    args: ['xpzf', 'm2.tar.gz']
 steps:
-  - name: python:3.6-slim
+  - name: python:3.6-alpine
     id: Load Pattern Library Templates
     entrypoint: bash
     dir: /workspace
@@ -22,7 +22,7 @@ steps:
       pipenv install --dev --deploy
 
   # Run unit tests
-  - name: python:3.6-slim
+  - name: python:3.6-alpine
     id: Run Python Unit Tests
     entrypoint: python
     args: ["-m", "pytest", "tests/unit", "--cov=app", "--cov-report xml", "--ignore=node_modules"] 
