--- a/docker/docker-compose-mock-ai.yml
+++ b/docker/docker-compose-mock-ai.yml
@@ -2,6 +2,6 @@ version: '3.8'
 services:
   mock-ai:
     container_name: mock-ai
-    image: europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/mock-ai:Use_latest_common
+    image: mock-ai
     ports:
     - "8162:8162"
