--- a/docker/docker-compose-rh-ui.yml
+++ b/docker/docker-compose-rh-ui.yml
@@ -1,3 +1,18 @@
 #
 # This file is a placeholder for a docker compose file that will start the rh-ui.
 #
+
+version: '3.8'
+services:
+  rh-ui:
+    container_name: rh-ui
+    image: rh-ui
+    depends_on:
+      - redis
+    environment:
+      - REDIS_SERVER=redis
+      - REDIS_PORT=6379
+      - APP_SETTINGS=DevelopmentConfig
+      - PORT=9092
+    ports:
+      - "9092:9092"
