--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ flake8 = "~=3.8.1"
 ipython = "~=7.14.0"
 pytest-aiohttp = "~=0.3.0"
 pytest-cov = "~=2.8.1"
+pytest-xdist = "~=1.34.0"
 pytest = "~=5.4.2"
 requests = "~=2.23.0"
 retrying = "~=1.3.3"
