--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
       pipenv install --dev --deploy
       date
       echo "Run Tests"
-      pipenv run pytest tests/unit --cov=app --cov-report xml --ignore=node_modules
+      pipenv run pytest tests/unit --cov=app --cov-report xml --ignore=node_modules -n 2
 
   # Docker Build
   - name: 'gcr.io/cloud-builders/docker'
