--- a/docker/docker-compose-mock-service.yml
+++ b/docker/docker-compose-mock-service.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   mock-ai:
-    container_name: mock-ai
-    image: mock-ai
+    container_name: mock-service
+    image: mock-service
     ports:
     - "8162:8162"
