SOCINT-146 Corrected service name to mock-service, as still had old name despite running new service

--- a/docker/docker-compose-rh-ui.yml
+++ b/docker/docker-compose-rh-ui.yml
@@ -5,7 +5,7 @@ services:
     image: rh-ui
     depends_on:
       - redis
-      - mock-ai
+      - mock-service
     environment:
       - REDIS_SERVER=redis
       - REDIS_PORT=6379
