cloudbuild - short_sha in tag

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,10 +23,10 @@ steps:
   # Docker Build
   - name: 'gcr.io/cloud-builders/docker'
     id: Docker Build
-    args: [ 'build', '-t', 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-ui:$BRANCH_NAME', '-f', 'Dockerfile', '.' ]
+    args: [ 'build', '-t', 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-ui:$BRANCH_NAME-$SHORT_SHA', '-f', 'Dockerfile', '.' ]
       
 timeout: '2400s'
-images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-ui:$BRANCH_NAME' ]
+images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-ui:$BRANCH_NAME-$SHORT_SHA' ]
 
 
 
