--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,8 @@ aiodns = "~=2.0.0"
 aiohttp-jinja2 = "~=1.2.0"
 aiohttp-session = {version = "~=2.9.0", extras = ["aioredis"]}
 aiohttp-utils = "~=3.1.1"
-aiohttp = "~=3.6.2"
+aiohttp = "~=3.7.0"
+aioredis = "~=1.3.1"
 babel = "~=2.8.0"
 cchardet = "~=2.1.6"
 cryptography = "~=3.2"
@@ -23,7 +24,7 @@ jinja2 = "~=2.11.2"
 
 [dev-packages]
 aiohttp-devtools = "~=0.13.1"
-aioresponses = "~=0.6.3"
+aioresponses = "~=0.7.2"
 coverage = "~=5.1"
 flake8 = "~=3.8.1"
 ipython = "~=7.14.0"
