--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ aiohttp-jinja2 = "~=1.2.0"
 aiohttp-session = {version = "~=2.9.0", extras = ["aioredis"]}
 aiohttp-utils = "~=3.1.1"
 aiohttp = "~=3.6.2"
+aioredis = "~=1.3.1"
 babel = "~=2.8.0"
 cchardet = "~=2.1.6"
 cryptography = "~=3.2"
@@ -20,6 +21,7 @@ sdc-cryptography = "~=0.4.0"
 structlog = "~=20.1.0"
 tenacity = "~=6.2.0"
 jinja2 = "~=2.11.2"
+urllib3 = "~=1.26.5"
 
 [dev-packages]
 aiohttp-devtools = "~=0.13.1"
