SOCINT-167 AIMS JWT Code splits AIMS call for internal and external, and now generates a JWT from an environment variable 'key' value rather than needing the JWT itself.

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ tenacity = "~=6.2.0"
 jinja2 = "~=2.11.2"
 importlib-metadata = "~=4.8.1"
 urllib3 = "~=1.26.5"
+pyjwt = "~=2.3.0"
 
 [dev-packages]
 aiohttp-devtools = "~=0.13.1"
