--- a/docker/docker-compose-rh-ui.yml
+++ b/docker/docker-compose-rh-ui.yml
@@ -12,6 +12,7 @@ services:
       - APP_SETTINGS=DevelopmentConfig
       - PORT=9092
       - ADDRESS_INDEX_SVC_URL=http://host.docker.internal:8162
+      - ADDRESS_INDEX_SVC_EXTERNAL_URL=http://host.docker.internal:8162
       - RHSVC_URL=http://host.docker.internal:8071
     ports:
       - "9092:9092"
