--- a/docker/docker-compose-rh-ui.yml
+++ b/docker/docker-compose-rh-ui.yml
@@ -1,8 +1,21 @@
 version: '3.8'
 services:
+
+  redis:
+    container_name: redis
+    image: redis
+    ports:
+      - "6379:6379"
+
+  mock-service:
+    container_name: mock-service
+    image: europe-west2-docker.pkg.dev/ons-ci-int/int-docker-release/mock-service:latest
+    ports:
+      - "8162:8162"
+
   rh-ui:
     container_name: rh-ui
-    image: rh-ui
+    image: europe-west2-docker.pkg.dev/ons-ci-int/int-docker-release/rh-ui:latest
     depends_on:
       - redis
       - mock-service
