Upgraded dependecies and python version

--- a/Pipfile
+++ b/Pipfile
@@ -4,37 +4,38 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiodns = "~=2.0.0"
-aiohttp-jinja2 = "~=1.2.0"
+aiodns = "~=3.0.0"
+aiohttp-jinja2 = "~=1.5"
 aiohttp-session = {version = "~=2.9.0", extras = ["aioredis"]}
 aiohttp-utils = "~=3.1.1"
-aiohttp = "~=3.7.4"
+aiohttp = "~=3.8.1"
 aioredis = "~=1.3.1"
-babel = "==2.9.1"
-cchardet = "~=2.1.6"
+babel = "==2.10.1"
+cchardet = "~=2.1.7"
 envparse = "~=0.2.0"
-invoke = "~=1.4.1"
-iso8601 = "~=0.1.12"
-python-json-logger = "~=0.1.11"
-structlog = "~=20.1.0"
-tenacity = "~=6.2.0"
-jinja2 = "~=2.11.2"
-importlib-metadata = "~=4.8.1"
-urllib3 = "~=1.26.5"
+invoke = "~=1.7.0"
+iso8601 = "~=1.0.2"
+python-json-logger = "~=2.0.2"
+structlog = "~=21.5.0"
+tenacity = "~=6.2.0" # No changelog, not updated
+jinja2 = "~=3.1.1"
+importlib-metadata = "~=4.11.3" # Requires python 3.7+
+urllib3 = "~=1.26.9"
 pyjwt = "~=2.3.0"
 
 [dev-packages]
-aiohttp-devtools = "~=0.13.1"
-aioresponses = "~=0.7.2"
-coverage = "~=5.1"
-flake8 = "~=3.8.1"
-ipython = "~=7.14.0"
-pytest-aiohttp = "~=0.3.0"
-pytest-cov = "~=2.8.1"
-pytest-xdist = "~=1.34.0"
-pytest = "~=5.4.2"
-requests = "~=2.23.0"
+aiohttp-devtools = "~=1.0.post0"
+aioresponses = "~=0.7.3"
+coverage = "~=6.3.2"
+flake8 = "*"
+ipython = "~=8.2.0"
+pytest-aiohttp = "~=1.0.4"
+pytest-cov = "~=3.0.0"
+pytest-xdist = "~=2.5.0"
+pytest = "~=7.1.2"
+requests = "~=2.27.1"
 retrying = "~=1.3.3"
+vulture = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.10.4"
