--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiodns = "~=3.0.0"
 aiohttp-jinja2 = "~=1.5"
-aiohttp-session = {version = "~=2.9.0", extras = ["aioredis"]}
-aiohttp-utils = "~=3.1.1"
+aiohttp-session = {version = "~=2.11.0", extras = ["aioredis"]}
 aiohttp = "~=3.8.1"
-aioredis = "~=1.3.1"
+aioredis = "~=2.0.1"
 babel = "==2.10.1"
 cchardet = "~=2.1.7"
 envparse = "~=0.2.0"
@@ -17,7 +15,7 @@ invoke = "~=1.7.0"
 iso8601 = "~=1.0.2"
 python-json-logger = "~=2.0.2"
 structlog = "~=21.5.0"
-tenacity = "~=6.2.0" # No changelog, not updated
+tenacity = "~=8.0.1"
 jinja2 = "~=3.1.1"
 importlib-metadata = "~=4.11.3" # Requires python 3.7+
 urllib3 = "~=1.26.9"
