--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 aiohttp-jinja2 = "~=1.5"
 aiohttp-session = {version = "~=2.11.0", extras = ["aioredis"]}
+aiohttp-utils = "~=3.1.1"
 aiohttp = "~=3.8.1"
 aioredis = "~=2.0.1"
 babel = "==2.10.1"
@@ -37,3 +38,4 @@ vulture = "*"
 
 [requires]
 python_version = "3.10.4"
+
