--- a/kubernetes/dev.yml
+++ b/kubernetes/dev.yml
@@ -49,6 +49,11 @@ spec:
             configMapKeyRef:
               name: domains
               key: en-host
+        - name: DOMAIN_URL_CY
+          valueFrom:
+            configMapKeyRef:
+              name: domains
+              key: cy-host
         - name: ADDRESS_INDEX_SVC_URL
           valueFrom:
             configMapKeyRef:
