--- a/tests/test_data/local.env
+++ b/tests/test_data/local.env
@@ -1,7 +1,7 @@
 PORT=9092
 APP_SETTINGS=DevelopmentConfig
 
-DOMAIN_URL_EN=http://localhost:9092
+DOMAIN_URL_EN=http://localhost:9092 # DOMAIN_URL_EN needs to be renamed to DOMAIN_URL
 ACCOUNT_SERVICE_URL=http://localhost:9092
 RHSVC_PASSWORD=secret
 RHSVC_URL=http://localhost:8071
