Fix 508 replace welsh url (#73)
* Remove all reference to DOMAIN_URL_CY

* Align english urls

* Remove blank line

* Add language routing to the view functions

* Added comments on DOMAIN_URL_EN required renaming

* styling

* Missed one link

--- a/kubernetes/dev.yml
+++ b/kubernetes/dev.yml
@@ -44,16 +44,11 @@ spec:
         - name: http-server
           containerPort: 9092
         env:
-        - name: DOMAIN_URL_EN
+        - name: DOMAIN_URL_EN # DOMAIN_URL_EN needs to be renamed to DOMAIN_URL
           valueFrom:
             configMapKeyRef:
               name: domains
               key: en-host
-        - name: DOMAIN_URL_CY
-          valueFrom:
-            configMapKeyRef:
-              name: domains
-              key: cy-host
         - name: ADDRESS_INDEX_SVC_URL
           valueFrom:
             configMapKeyRef:
