--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - docker network create ssdcrmdockerdev_default
 
 install:
-  - pip install -U pipenv
+  - pip install -U pipenv==v2022.11.11
 
 script:
   - make test
