--- a/kubernetes/dev.yml
+++ b/kubernetes/dev.yml
@@ -44,16 +44,11 @@ spec:
         - name: http-server
           containerPort: 9092
         env:
-        - name: DOMAIN_URL_EN # DOMAIN_URL_EN needs to be renamed to DOMAIN_URL
+        - name: DOMAIN_URL
           valueFrom:
             configMapKeyRef:
               name: domains
               key: en-host
-        - name: ADDRESS_INDEX_SVC_URL
-          valueFrom:
-            configMapKeyRef:
-              name: rh-config
-              key: address-index-svc-url
         - name: EQ_HOST
           valueFrom:
             configMapKeyRef:
