--- a/.github/workflows/checks-and-tests.yml
+++ b/.github/workflows/checks-and-tests.yml
@@ -44,7 +44,7 @@ jobs:
         run: make unit_tests
 
       - name: Check Docker Build
-        run: make docker_build
+        run: make docker-build
 
       - name: Run Codecov
         uses: codecov/codecov-action@v3
