--- a/Pipfile
+++ b/Pipfile
@@ -15,9 +15,10 @@ invoke = "~=1.7.0"
 python-json-logger = "~=2.0.2"
 structlog = "~=21.5.0"
 tenacity = "~=8.0.1"
-jinja2 = "~=3.1.1"
+jinja2 = "~=3.1.3"
 importlib-metadata = "~=7.0.0" # Requires python 3.7+
 urllib3 = "~=1.26.9"
+pytz = "*"
 
 [dev-packages]
 aiohttp-devtools = "~=1.0.post0"
